--- a/Rome_History.html
+++ b/Rome_History.html
@@ -5,6 +5,14 @@
     </head>
     
     <body>
+        <nav>
+            <ul>
+                <li>About rome</li>
+                <li>About Cesar</li>
+                <li>About Cimeron</li>
+                <li>About Temero</li>
+            </ul>
+        </nav>
         <p>Just a history of Cesar</p>
         
         <div>
